Bug 466971 - Korganizer crashes when dragging the edge of an event in the month view
Summary: Korganizer crashes when dragging the edge of an event in the month view
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 5.22.3
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 466212 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-03-06 20:47 UTC by Alex Dănilă
Modified: 2023-10-14 08:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.1
Sentry Crash Report:


Attachments
Crash stack, other can be produced on request (4.74 KB, text/vnd.kde.kcrash-report)
2023-03-06 20:47 UTC, Alex Dănilă
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Dănilă 2023-03-06 20:47:42 UTC
Created attachment 157064 [details]
Crash stack, other can be produced on request

SUMMARY
Crashes when dragging an edge of an event, such as to extend or shorten it.


STEPS TO REPRODUCE
1. Open month view
2. Add a few events
3. Click on the edge of one event and start dragging to extend and shorten it
4. After a succession of such ”resizes” the crash will likely happen.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian GNU/Linux 12, 6.1.0-5-amd64
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-04-22 16:39:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/84
Comment 2 Daniel Vrátil 2023-04-24 21:59:58 UTC
Git commit 2618de9e74413faf7dd943d22d16f1d9b0a7d4f5 by Daniel Vrátil.
Committed on 24/04/2023 at 21:59.
Pushed by dvratil into branch 'release/23.04'.

Fix crash when dragging event ouf of month view scene
FIXED-IN: 23.04.1

M  +1    -1    src/month/monthscene.cpp

https://invent.kde.org/pim/eventviews/commit/2618de9e74413faf7dd943d22d16f1d9b0a7d4f5
Comment 3 Daniel Vrátil 2023-10-14 08:46:05 UTC
*** Bug 466212 has been marked as a duplicate of this bug. ***