Fix crash when dragging event ouf of month view scene

BUG: 466971
FIXED-IN: 23.04.1